[#39] Github publish service